// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components/Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jAaTju daAYrj"
  >
    <table
      className="sc-jDwBTQ eKJvCH"
    >
      <tbody
        className="sc-iRbamj blSEcj"
      >
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik fbopXj"
          >
            US
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik fbopXj"
          >
            PL
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Warsaw
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik fbopXj"
          >
            DE
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Berlin
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik fbopXj"
          >
            FR
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Paris
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik fbopXj"
          >
            ES
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Madird
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik fbopXj"
          >
            —
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components/Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jAaTju daAYrj"
  >
    <table
      className="sc-jDwBTQ eKJvCH"
    >
      <thead
        className="sc-gPEVay eQYmiW"
      >
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <th
            className="sc-csuQGl eUUoJn"
          >
            Code
          </th>
          <th
            className="sc-csuQGl eUUoJn"
          >
            Capital
          </th>
          <th
            className="sc-csuQGl eUUoJn"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-iRbamj blSEcj"
      >
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik fbopXj"
          >
            US
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik fbopXj"
          >
            PL
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Warsaw
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik fbopXj"
          >
            DE
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Berlin
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik fbopXj"
          >
            FR
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Paris
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik fbopXj"
          >
            ES
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Madird
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-gipzik fbopXj"
          >
            —
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components/Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-jAaTju daAYrj"
  >
    <table
      className="sc-jDwBTQ eKJvCH"
    >
      <thead
        className="sc-gPEVay eQYmiW"
      >
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <th
            className="sc-csuQGl eUUoJn"
          >
            #
          </th>
          <th
            className="sc-csuQGl eUUoJn"
          >
            Code
          </th>
          <th
            className="sc-csuQGl eUUoJn"
          >
            Capital
          </th>
          <th
            className="sc-csuQGl eUUoJn"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-iRbamj blSEcj"
      >
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-Rmtcm UgJWe"
          >
            1
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            US
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-Rmtcm UgJWe"
          >
            2
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            PL
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Warsaw
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-Rmtcm UgJWe"
          >
            3
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            DE
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Berlin
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-Rmtcm UgJWe"
          >
            4
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            FR
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Paris
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-Rmtcm UgJWe"
          >
            5
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            ES
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Madird
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-jlyJG iaCqlf"
        >
          <td
            className="sc-Rmtcm UgJWe"
          >
            6
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            —
          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-gipzik fbopXj"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
